# Dyssol-open

./: .buildinfo  .gitattributes  .gitignore  .gitlab-ci.yml  Bunker.dflw  CHANGELOG  CITATION  CMakeLists.txt  Dyssol.sln  LICENSE  Materials.dmdb  README  README.md  generate_build_version.bat  genindex.html  index.html  objects.inv  output.json  output.txt  search.html  searchindex.js  todo.md
.doctrees/: environment.pickle  index.doctree
000_get_started/: get_started.html
001_ui/: cli.html  gui.html
002_theory/: brief.html  data.html  materials.html  multiDim.html  simulation.html  theory.html  time.html
003_models/: solver_cellaverage.html  solver_fft.html  solver_fixedpivot.html  solvers.html  unit_agglomerator.html  unit_bunker.html  unit_crusher.html  unit_cyclone.html  unit_granulator.html  unit_inletflow.html  unit_mixer.html  unit_outletflow.html  unit_screen.html  unit_solidsbunker.html  unit_splitter.html  unit_timedelay.html  units.html
004_development/: api.html  auxiliary_classes.html  class_agglomerationsolver.html  class_basesolver.html  class_basestream.html  class_baseunit.html  class_chemicalreaction.html  class_curve.html  class_densemdmatrix.html  class_holdup.html  class_matrix2d.html  class_mixtureenthalpylookup.html  class_plot.html  class_plotmanager.html  class_point.html  class_portsmanager.html  class_statevariable.html  class_statevariablesmanager.html  class_stream.html  class_transformmatrix.html  class_unitparameters.html  class_unitparametersmanager.html  class_unitport.html  class_upbase.html  class_upcheckbox.html  class_upcombobox.html  class_upcompound.html  class_upcompoundmdb.html  class_upconst.html  class_upconstint.html  class_upconstreal.html  class_upconstuint.html  class_updependent.html  class_uplist.html  class_uplistint.html  class_uplistreal.html  class_uplistuint.html  class_upreaction.html  class_upsolver.html  class_upstring.html  (+11 more)
BaseSolvers/: AgglomerationSolver.cpp  AgglomerationSolver.h  BaseSolver.cpp  BaseSolver.h  BaseSolvers.vcxproj  BaseSolvers.vcxproj.filters  PBMSolver.cpp  PBMSolver.h
CacheHandler/: BaseCacheHandler.cpp  BaseCacheHandler.h  CacheHandler.vcxproj  CacheHandler.vcxproj.filters  DenseDistrCacher.cpp  DenseDistrCacher.h  MDMatrCacher.cpp  MDMatrCacher.h
Documentation/: Doxyfile.in  conf.py.in  index.rst
DocumentationSphinx/: brief.rst  class.rst  cli.rst  conf.py  conf.py.in  data.rst  developer.rst  first.rst  for_developers.rst  (+10 more)
DyssolGUI/: CMakeLists.txt  Dyssol.rc  DyssolGUI.vcxproj  DyssolGUI.vcxproj.filters  SaveLoadThread.h  config.ini  main.cpp
DyssolLinux/: CMakeLists.txt  copy_files.sh  install_cmake.sh  install_compiler.sh  install_gcc.sh  install_hdf5.sh  install_sundials.sh  make_dyssol.sh  windows_copy_files.bat  windows_files.bat  windows_link_files.bat
DyssolMainWindow/: AboutWindow.cpp  AboutWindow.h  AboutWindow.ui  CMakeLists.txt  Dyssol.cpp  Dyssol.h  Dyssol.rc  Dyssol.ui  DyssolMainWindow.vcxproj  DyssolMainWindow.vcxproj.filters  Resources.qrc  SaveLoadThread.cpp  SaveLoadThread.h  config.ini  config.ini.in  main.cpp  resource.h
Solvers/: CMakeLists.txt
Solvers/AgglomerationCellAverage/: AgglomerationCellAverage.cpp  AgglomerationCellAverage.h  AgglomerationCellAverage.vcxproj
Solvers/AgglomerationFFT/: AgglomerationFFT.cpp  AgglomerationFFT.h  AgglomerationFFT.vcxproj  kiss_fft.c  kiss_fft.cpp  kiss_fft.h  kiss_fft_guts.h  kiss_fftr.c  kiss_fftr.cpp  kiss_fftr.h
Solvers/AgglomerationFixedPivot/: AgglomerationFixedPivot.cpp  AgglomerationFixedPivot.h  AgglomerationFixedPivot.vcxproj
Solvers/Templates/AgglomerationTemplate/: AgglomerationTemplate.vcxproj  AgglomerationTemplate.vcxproj.filters  Solver.cpp  Solver.h
Units/: CMakeLists.txt
Units/Agglomerator/: Agglomerator.cpp  Agglomerator.h  Agglomerator.vcxproj  Agglomerator.vcxproj.filters
Units/Bunker/: Bunker.cpp  Bunker.h  Bunker.vcxproj  Bunker.vcxproj.filters
Units/Crusher/: Crusher.cpp  Crusher.h  Crusher.vcxproj  Crusher.vcxproj.filters
Units/CrusherPBMTM/: CrusherPBMTM.cpp  CrusherPBMTM.h  CrusherPBMTM.vcxproj  CrusherPBMTM.vcxproj.filters
Units/Cyclone2/: Cyclone2.cpp  Cyclone2.h  Cyclone2.vcxproj
Units/CycloneMuschelknautz/: CycloneMuschelknautz.cpp  CycloneMuschelknautz.h  CycloneMuschelknautz.vcxproj
Units/Granulator/: Granulator.cpp  Granulator.h  Granulator.vcxproj  Granulator.vcxproj.filters
Units/GranulatorSimpleBatch/: GranulatorSimpleBatch.cpp  GranulatorSimpleBatch.h  GranulatorSimpleBatch.vcxproj  GranulatorSimpleBatch.vcxproj.filters
Units/HeatExchanger/: HeatExchanger.cpp  HeatExchanger.h  HeatExchanger.vcxproj  HeatExchanger.vcxproj.filters
Units/Inlet/: Inlet.cpp  Inlet.h  Inlet.vcxproj  Inlet.vcxproj.filters
Units/Mixer/: Mixer.cpp  Mixer.h  Mixer.vcxproj  Mixer.vcxproj.filters
Units/Mixer3/: Mixer3.cpp  Mixer3.h  Mixer3.vcxproj  Mixer3.vcxproj.filters
Units/Outlet/: Outlet.cpp  Outlet.h  Outlet.vcxproj  Outlet.vcxproj.filters
Units/Screen/: Screen.cpp  Screen.h  Screen.vcxproj  Screen.vcxproj.filters
Units/ScreenMulti/: ScreenMulti.cpp  ScreenMulti.h  ScreenMulti.vcxproj  ScreenMulti.vcxproj.filters
Units/ScreenMultideck/: ScreenMultideck.cpp  ScreenMultideck.h  ScreenMultideck.vcxproj  ScreenMultideck.vcxproj.filters
Units/Splitter/: Splitter.cpp  Splitter.h  Splitter.vcxproj  Splitter.vcxproj.filters
Units/Splitter3/: Splitter3.cpp  Splitter3.h  Splitter3.vcxproj  Splitter3.vcxproj.filters
Units/Templates/Dynamic/: Dynamic.vcxproj  Unit.cpp  Unit.h
Units/Templates/DynamicWithDAESolver/: DynamicWithDAESolver.vcxproj  DynamicWithDAESolver.vcxproj.filters  Unit.cpp  Unit.h
Units/Templates/SteadyState/: SteadyState.vcxproj  SteadyState.vcxproj.filters  Unit.cpp  Unit.h
Units/Templates/SteadyStateWithNLSolver/: SteadyStateWithNLSolver.vcxproj  SteadyStateWithNLSolver.vcxproj.filters  Unit.cpp  Unit.h
Units/TimeDelay/: TimeDelay.cpp  TimeDelay.h  TimeDelay.vcxproj  TimeDelay.vcxproj.filters
Units/xyz-testGranulatorWithoutThermo/: Granulator.vcxproj  Granulator.vcxproj.filters  myGranulatorWithoutThermo.cpp  myGranulatorWithoutThermo.h
(+872 files in other folders)
